--- a/index.html
+++ b/index.html
@@ -11,36 +11,21 @@
     <button id="authorize_button" onclick="handleAuthClick()">Authorize</button>
     <button id="signout_button" onclick="handleSignoutClick()">Sign Out</button>
     <pre id="content" style="white-space: pre-wrap;"></pre>
-    <div class="calendar">
-        <div class="timeline">
-          <div class="spacer"></div>
-          <div class="time-marker">9 AM</div>
-          <div class="time-marker">10 AM</div>
-          <div class="time-marker">11 AM</div>
-          <div class="time-marker">12 PM</div>
-          <div class="time-marker">1 PM</div>
-          <div class="time-marker">2 PM</div>
-          <div class="time-marker">3 PM</div>
-          <div class="time-marker">4 PM</div>
-          <div class="time-marker">5 PM</div>
-          <div class="time-marker">6 PM</div>
-        </div>
-        <div class="days">
-          <div class="day mon">
-            <div class="date">
-              <p class="date-num" id="date-num"></p>
-              <p class="date-day" id="date-day"></p>
-            </div>
-            <div class="events">
-              <div class="event start-2 end-5 securities">
-                <p class="title" id="eventsummary"></p>
-                <p class="time" id="time"></p>
-              </div>
-            </div>
-          </div>      
-          </div>
-        </div>
+  
+      <div class="card card-4">
+        <h1 class="date">
+            <p class="date-num" id="date-num"></p>
+            <p class="date-day" id="date-day"></p>
+        </h1>
+        <div class="card__icon"><i class="fas fa-bolt"></i></div>
+        <p class="card__exit"><i class="fas fa-times"></i></p>
+        <h2 class="title" id="eventsummary"></h2>
+        <p class="time" id="time"></p>
+        <p class="card__apply">
+          <a id="cardinnertext"class="card__link" href="#">Hey you <i class="fas fa-arrow-right"></i></a>
+        </p>
       </div>
+
     <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
     <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
     <script src="js/calendar.js"></script>
