--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="calendar.css">
 </head>
 <body>
-    <button id="authorize_button" onclick="handleAuthClick()">Authorize</button>
+    <button id="authorize_button" onclick="handleAuthClick()">Authorize your account</button>
     <button id="signout_button" onclick="handleSignoutClick()">Sign Out</button>
     <pre id="content" style="white-space: pre-wrap;"></pre>
   
@@ -19,14 +19,20 @@
         </h1>
         <div class="card__icon"><i class="fas fa-bolt"></i></div>
         <p class="card__exit"><i class="fas fa-times"></i></p>
-        <h2 class="title" id="eventsummary"></h2>
-        <p class="time" id="time"></p>
+        <h2 class="title" id="eventsummary">Hey you, sync your calendar</h2>
+        <p class="time" id="time">If you want to... Of course</p>
         <p class="card__apply">
-          <a id="cardinnertext"class="card__link" href="#">Hey you <i class="fas fa-arrow-right"></i></a>
+          <a id="cardinnertext"class="card__link" href="#">Are we inclined to do anything?<i class="fas fa-arrow-right"></i></a>
         </p>
       </div>
-    <h1>Not Feel It Today?</h1>
-    <p id="click">Feeling Down?</p>
+    <p id="zen">Feeling Down?</p>
+    <style>
+        #zen {
+          position: fixed;
+          bottom: 0;
+          right: 0;
+        }
+      </style>
     <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
     <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
     <script src="js/calendar.js"></script>
