clock and brandump prompt added to html file

--- a/index.html
+++ b/index.html
@@ -25,6 +25,74 @@
           <a id="cardinnertext"class="card__link" href="#">Are we inclined to do anything?<i class="fas fa-arrow-right"></i></a>
         </p>
       </div>
+<!-- Ashé's Code -->
+<div class="popup">
+  <button data-form-target="#form">
+      <div class="letter-image">
+        <div class="mail">
+          <div class="back-fold"></div>
+          <div class="letter">
+            <div class="letter-border"></div>
+            <div class="letter-title"></div>
+            <p>What are you feeling?</p>
+            <div class="letter-context"></div>
+            <div class="letter-stamp">
+              <div class="letter-stamp-inner"></div>
+            </div>
+          </div>
+          <div class="top-fold"></div>
+          <div class="body"></div>
+          <div class="left-fold"></div>
+        </div>
+        <div class="shadow"></div>
+      </div>
+    </button>
+    
+  <a id="close" href="#">Skip</a>
+</div>
+
+
+
+<!-- digital clock start -->
+<div class= "containerClock">
+<div class="datetime">
+<div class="date">
+  <span id="dayname">Day</span>,
+  <span id="month">Month</span>
+  <span id="daynum">00</span>,
+  <span id="year">Year</span>
+</div>
+<div class="time">
+  <span id="hour">00</span>:
+  <span id="minutes">00</span>:
+  <span id="seconds">00</span>
+  <span id="period">AM</span>
+</div>
+</div>
+</div>
+<!-- end clock -->
+
+<div class="form" id="form">
+<div class="form-header">
+<div class="title">Breath & Let Go</div>
+</div>
+<div class="form-body">
+  <form action="/action_page.php">
+      <p><label for="doMore">Write your thoughts here then send them into the wind:</label></p>
+      <textarea id="doMore" name="doMore" rows="4" cols="50">What are you feeling? Dump it here.</textarea>
+      <br>
+      <a data-close-button class="close-button" id="close" href="#">Let It Go</a>
+    </form>
+
+</div>
+</div>
+<div id="overlay"></div>
+<!-- Ashé's Code ends here -->
+
+
+
+
+
     <p id="zen">Feeling Down?</p>
     <style>
         #zen {
