--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
     <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
     <script src="js/calendar.js"></script>
     <script type = "module" src ="index.js"></script>
+    <script type = "module" src="weather.js"></script>
 </body>
 </html>
