--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="calendar.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <button id="authorize_button" onclick="handleAuthClick()">Authorize your account</button>
