fixed bug, where card would change when motivation api would activate

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="card__icon"><i class="fas fa-bolt"></i></div>
         <p class="card__exit"><i class="fas fa-times"></i></p>
         <h2 class="title" id="eventsummary">Hey you, sync your calendar</h2>
-        <p class="time" id="time">If you want to... Of course</p>
-        <p class="card__apply">
+          <p class="time" id="time"></p>
+          <p class="card__apply">
           <a id="cardinnertext"class="card__link" href="#">Are we inclined to do anything?<i class="fas fa-arrow-right"></i></a>
         </p>
       </div>
