update from var to let

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="calendar.css">
     <link rel="stylesheet" href="index.css">
 </head>
-<body>
+<body class="wrapper" onload="initClock()">
     <button id="authorize_button" onclick="handleAuthClick()">Authorize your account</button>
     <button id="signout_button" onclick="handleSignoutClick()">Sign Out</button>
     <pre id="content" style="white-space: pre-wrap;"></pre>
