--- a/index.html
+++ b/index.html
@@ -106,6 +106,6 @@
     <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
     <script src="js/calendar.js"></script>
     <script type = "module" src ="index.js"></script>
-    <script>"weather.js"</script>
+    <script src="weather.js"></script>
 </body>
 </html>
