--- a/index.html
+++ b/index.html
@@ -55,21 +55,8 @@
 
 
 <!-- digital clock start -->
-<div class= "containerClock">
-<div class="datetime">
-<div class="date">
-  <span id="dayname">Day</span>,
-  <span id="month">Month</span>
-  <span id="daynum">00</span>,
-  <span id="year">Year</span>
-</div>
-<div class="time">
-  <span id="hour">00</span>:
-  <span id="minutes">00</span>:
-  <span id="seconds">00</span>
-  <span id="period">AM</span>
-</div>
-</div>
+<div id="clock">
+  <h1 id="date-time"></h1>
 </div>
 <!-- end clock -->
 
