--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <a id="cardinnertext"class="card__link" href="#">Are we inclined to do anything?<i class="fas fa-arrow-right"></i></a>
         </p>
       </div>
+
 <!-- Ashé's Code -->
 <div class="popup">
   <button data-form-target="#form">
@@ -106,6 +107,6 @@
     <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
     <script src="js/calendar.js"></script>
     <script type = "module" src ="index.js"></script>
-    <script src="weather.js"></script>
+    <script type = "module" src="weather.js"></script>
 </body>
 </html>
