--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <img id= "weathericon"src="">
         </div>
         <h2 id="temperature"></h2>
+        <h2 id="forecast"></h2>
         <p class="card__apply">
         </p>
       </div>
