landing page link to home page fixed

--- a/LandingPage/LandingPage.html
+++ b/LandingPage/LandingPage.html
@@ -34,7 +34,7 @@
         </div>
         <script>
             function pageRedirect() {
-                window.location.replace("../DoMore/index.html");
+                window.location.replace("../index.html");
             }     
         </script>
         
