--- a/index.html
+++ b/index.html
@@ -96,9 +96,12 @@
     <style>
         #zen {
           position: fixed;
-          bottom: 0;
-          right: 0;
+          bottom: 5%;
+          right: 5%;
           font-size: 20px;
+          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+          font-weight: bold;
         }
       </style>
     <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
