working on pop for braindump envolope

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
           <div class="letter">
             <div class="letter-border"></div>
             <div class="letter-title"></div>
-            <p>What are you feeling?</p>
+            
+            <p>What are you feeling?<a id="textArea" onclick="writeFeelings()"></a></p>
             <div class="letter-context"></div>
             <div class="letter-stamp">
               <div class="letter-stamp-inner"></div>
