--- a/index.html
+++ b/index.html
@@ -1,171 +1,201 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="calendar.css">
-    <link rel="stylesheet" href="index.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="calendar.css">
+  <link rel="stylesheet" href="index.css">
+  <!-- <link rel="stylesheet" href="dolist.css"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
-<body class="wrapper" >
-    <button id="signout_button" onclick="handleSignoutClick()">Sign Out</button>
-    <pre id="content" style="white-space: pre-wrap;"></pre>
-  
-      <div class="card card-4">
-        <h1 class="date">
-            <p id="intromessage">Hey you, sync your calendar</p>
-            <p class="date-num" id="date-num"></p>
-            <p class="date-day" id="date-day"></p>
-        </h1>
-        <div class="card__icon"><i class="fas fa-bolt"></i></div>
-        <p class="card__exit"><i class="fas fa-times"></i></p>
-        <h2 class="title" id="eventsummary"></h2>
-          <p class="time" id="time"></p>
-          <p class="card__apply">
-          <a id="cardinnertext"class="card__link" href="#">
-            <button id="authorize_button" onclick="handleAuthClick()">Authorize your account</button>
-            <i class="fas fa-arrow-right"></i></a>
-        </p>
-      </div>
-      <div class="card card-5">
-        <div class="card__icon">
-          <img id= "weathericon"src="">
-        </div>
-        <h2 id="temperature"></h2>
-        <h2 id="forecast"></h2>
-        <p class="card__apply">
-        </p>
-      </div>
-<!-- Ashé's Code -->
-<div class="letter-image">
-  <div class="animated-mail">
-    <div class="back-fold"></div>
-    <div class="letter">
-      <div class="letter-border"></div>
-      <div class="letter-title"></div>
-      
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-/* Popup container - can be anything you want */
-.popup {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
 
-/* The actual popup */
-.popup .popuptext {
-  visibility: hidden;
-  background: url(images/notebook.png) repeat-y;
-width: 600px;
-height: 300px;
-font: normal 14px verdana;
-line-height: 25px;
-padding: 2px 10px;
-border: solid 1px #ddd;
-}
+<body class="wrapper">
+  <button id="signout_button" onclick="handleSignoutClick()">Sign Out</button>
+  <pre id="content" style="white-space: pre-wrap;"></pre>
 
-/* Popup arrow */
-.popup .popuptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
-}
-
-/* Toggle this class - hide and show the popup */
-.popup .show {
-  visibility: visible;
-  -webkit-animation: fadeIn 1s;
-  animation: fadeIn 1s;
-}
-
-/* Add animation (fade in the popup) */
-@-webkit-keyframes fadeIn {
-  from {opacity: 0;} 
-  to {opacity: 1;}
-}
-
-@keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity:1 ;}
-}
-</style>
-
-<body style="text-align:center">
-
-<div class="popup" onclick="myFunction()">How are you feeling
-  <textarea class="popuptext" id="myPopup"></textarea>
-</div>
-
-<script>
-// When the user clicks on div, open the popup
-function myFunction() {
-  let popup = document.getElementById("myPopup");
-  popup.classList.toggle("show");
-}
-</script>
-
-
-
-      <div class="letter-context"></div>
-      <div class="letter-stamp">
-        <div class="letter-stamp-inner"></div>
-      </div>
-    </div>
-    <div class="top-fold"></div>
-    <div class="body"></div>
-    <div class="left-fold"></div>
+  <div class="card card-4">
+    <h1 class="date">
+      <p id="intromessage">Sync your calendar</p>
+      <p class="date-num" id="date-num"></p>
+      <p class="date-day" id="date-day"></p>
+    </h1>
+    <div class="card__icon"><i class="fas fa-bolt"></i></div>
+    <p class="card__exit"><i class="fas fa-times"></i></p>
+    <h2 class="title" id="eventsummary"></h2>
+    <p class="time" id="time"></p>
+    <p class="card__apply">
+      <a id="cardinnertext" class="card__link" href="#">
+        <button id="authorize_button" onclick="handleAuthClick()">Authorize your account</button>
+        <i class="fas fa-arrow-right"></i></a>
+    </p>
   </div>
-  <div class="shadow"></div>
- 
-</div>
+  <div class="card card-5">
+    <div class="card__icon">
+      <img id="weathericon" src="">
+    </div>
+    <h2 id="temperature"></h2>
+    <h2 id="forecast"></h2>
+    <p class="card__apply">
+    </p>
+  </div>
+  <!-- Ashé's Code -->
+  <div class="letter-image">
+    <div class="animated-mail">
+      <div class="back-fold"></div>
+      <div class="letter">
+        <div class="letter-border"></div>
+        <div class="letter-title"></div>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+          /* Popup container - can be anything you want */
+          .popup {
+            position: relative;
+            display: inline-block;
+            cursor: pointer;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+          }
+
+          /* The actual popup */
+          .popup .popuptext {
+            visibility: hidden;
+            background: url(images/notebook.png) repeat-y;
+            width: 600px;
+            height: 300px;
+            font: normal 14px verdana;
+            line-height: 25px;
+            padding: 2px 10px;
+            border: solid 1px #ddd;
+          }
+
+          /* Popup arrow */
+          .popup .popuptext::after {
+            content: "";
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            margin-left: -5px;
+            border-width: 5px;
+            border-style: solid;
+            border-color: #555 transparent transparent transparent;
+          }
+
+          /* Toggle this class - hide and show the popup */
+          .popup .show {
+            visibility: visible;
+            -webkit-animation: fadeIn 1s;
+            animation: fadeIn 1s;
+          }
+
+          /* Add animation (fade in the popup) */
+          @-webkit-keyframes fadeIn {
+            from {
+              opacity: 0;
+            }
+
+            to {
+              opacity: 1;
+            }
+          }
+
+          @keyframes fadeIn {
+            from {
+              opacity: 0;
+            }
+
+            to {
+              opacity: 1;
+            }
+          }
+        </style>
+
+        <body style="text-align:center">
+
+          <div class="popup" onclick="myFunction()">How are you feeling
+            <textarea class="popuptext" id="myPopup"></textarea>
+          </div>
+
+          <script>
+            // When the user clicks on div, open the popup
+            function myFunction() {
+              let popup = document.getElementById("myPopup");
+              popup.classList.toggle("show");
+            }
+          </script>
 
 
-<!-- digital clock start -->
-<div id="clock">
-  <h1 id="date-time"></h1>
-</div>
-<!-- end clock -->
 
-<div class="form" id="form">
-<div class="form-header">
-<div class="title">Breath & Let Go</div>
-</div>
-</div>
+          <div class="letter-context"></div>
+          <div class="letter-stamp">
+            <div class="letter-stamp-inner"></div>
+          </div>
+      </div>
+      <div class="top-fold"></div>
+      <div class="body"></div>
+      <div class="left-fold"></div>
+    </div>
+    <div class="shadow"></div>
 
-<div id="overlay"></div>
-<!-- Ashé's Code ends here -->
-
+  </div>
 
 
+  <!-- digital clock start -->
+  <div id="clock">
+    <h1 id="date-time"></h1>
+  </div>
+  <!-- end clock -->
 
+  <div class="form" id="form">
+    <div class="form-header">
+      <div class="title">Breath & Let Go</div>
+    </div>
+  </div>
 
-    <p id="zen">Feeling Down?</p>
-    <style>
-        #zen {
-          position: fixed;
-          bottom: 5%;
-          right: 5%;
-          font-size: 20px;
-          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-          font-weight: bold;
-        }
-      </style>
-    <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
-    <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
-    <script src="js/calendar.js"></script>
-    <script type = "module" src ="index.js"></script>
-    <script type = "module" src="weather.js"></script>
+  <div id="overlay"></div>
+  <!-- Ashé's Code ends here -->
+  <div class="card card-3">
+    <div class="card__icon"><i class="fas fa-bolt"></i></div>
+    <p class="card__exit"><i class="fas fa-times"></i></p>
+    <div id="app">
+      <h1>to do list</h1>
+  
+      <ul>
+  
+      </ul>
+  
+      <input type="text" placeholder="New task">
+      <button class='btn_add'>Add</button>
+  
+      <p>Insert a new task</p>
+    </div>
+    </p>
+  </div>
+  
+  <p id="zen">Feeling Down?</p>
+  <style>
+    #zen {
+      position: fixed;
+      bottom: 5%;
+      right: 5%;
+      font-size: 20px;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+        Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-weight: bold;
+    }
+  </style>
+  <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
+  <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
+  <script src="js/calendar.js"></script>
+  <script type="module" src="index.js"></script>
+  <script type="module" src="weather.js"></script>
+  <script type="module" src="dolist.js"></script>
 </body>
+
 </html>
