feat: finished to do list, need to style

--- a/index.html
+++ b/index.html
@@ -163,21 +163,18 @@
   <div class="card card-3">
     <div class="card__icon"><i class="fas fa-bolt"></i></div>
     <p class="card__exit"><i class="fas fa-times"></i></p>
-    <div id="app">
-      <h1>to do list</h1>
-  
-      <ul>
-  
-      </ul>
-  
-      <input type="text" placeholder="New task">
-      <button class='btn_add'>Add</button>
-  
-      <p>Insert a new task</p>
+    <h1>Things To-Do</h1>
+    <div class="container">
+
+      <form action="#">
+        <input type="text" name="item" id="item" placeholder="" />
+      </form>
+      <ul id="list"></ul>
+
     </div>
     </p>
   </div>
-  
+
   <p id="zen">Feeling Down?</p>
   <style>
     #zen {
