style: changes to landingpage

--- a/LandingPage/LandingPage.html
+++ b/LandingPage/LandingPage.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="landingPage.css">
+  <link rel="stylesheet" href="LandingPage.css">
   <link rel="stylesheet" href="splashIntro.css">
 
   <title>Do-More</title>
@@ -14,7 +14,7 @@
 <body>
   <div class="splash">
     <div class="splash_logo">
-      DM
+      <img id="logo" src="/DoMore/logo.png">
     </div>
     <div class="splash_svg">
       <svg width="100%" height="100%">
@@ -28,10 +28,10 @@
     </div>
   </div>
   <div class="text">
-    <p>Do More</p>
+    <p>DoMore</p>
     <p>Stress Less</p>
     <div class="buttonOptions">
-      <button id="more" onclick="pageRedirect()">Do More</button>
+      <button id="more" onclick="pageRedirect()">DoMore</button>
       <button id="less" onclick="">Stress Less</button>
     </div>
     <script>
