commiting to pull

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
       <div class="card card-4">
         <h1 class="date">
-            <p id="intromessage">Hey you, sync your calendar</p>
+            <p id="intromessage">Connect via Gmail</p>
             <p class="date-num" id="date-num"></p>
             <p class="date-day" id="date-day"></p>
         </h1>
@@ -37,8 +37,19 @@
         <p class="card__apply">
         </p>
       </div>
+
+      <a class="button" href="#openModal">How Are You Feeling?</a>
+
+<div id="openModal" class="modalbg">
+  <div class="dialog">
+    <a href="#close" title="Close" class="close">X</a>
+  	<h2>Dump your thoughts here</h2>
+	</div>
+</div>
 <!-- Ashé's Code -->
-<div class="letter-image">
+
+<!-- envelope start -->
+<!-- <div class="letter-image">
   <div class="animated-mail">
     <div class="back-fold"></div>
     <div class="letter">
@@ -129,7 +140,7 @@ function myFunction() {
   <div class="shadow"></div>
  
 </div>
-
+ envelope end -->
 
 <!-- digital clock start -->
 <div id="clock">
@@ -141,7 +152,7 @@ function myFunction() {
 <div class="form-header">
 <div class="title">Breath & Let Go</div>
 </div>
-</div>
+</div> -->
 
 <div id="overlay"></div>
 <!-- Ashé's Code ends here -->
