--- a/LandingPage/LandingPage.html
+++ b/LandingPage/LandingPage.html
@@ -28,7 +28,7 @@
     </div>
   </div>
   <div class="text">
-    <p>DoMore</p>
+    <img id="landinglogo" src="/DoMore/logo.png">
     <p>Stress Less</p>
     <div class="buttonOptions">
       <button id="more" onclick="pageRedirect()">DoMore</button>
