--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
-
+<img id="logo"src="logo.png">
 <body class="wrapper">
   <button id="signout_button" onclick="handleSignoutClick()">Sign Out</button>
   <pre id="content" style="white-space: pre-wrap;"></pre>
