--- a/LandingPage/LandingPage.html
+++ b/LandingPage/LandingPage.html
@@ -14,7 +14,7 @@
 <body>
   <div class="splash">
     <div class="splash_logo">
-      <img id="logo" src="/DoMore/logo.png">
+      <img id="logo" src="../images/logo.png">
     </div>
     <div class="splash_svg">
       <svg width="100%" height="100%">
