all files updated, bugs and merge conflict fixed. Fixed envelope to appear onload and have a working close button

--- a/LandingPage/LandingPage.html
+++ b/LandingPage/LandingPage.html
@@ -28,7 +28,7 @@
     </div>
   </div>
   <div class="text">
-    <img id="landinglogo" src="/DoMore/logo.png">
+    <img id="landinglogo" src="../images/logo.png">
     <p>Stress Less</p>
     <div class="buttonOptions">
       <button id="more" onclick="pageRedirect()">DoMore</button>
