style: changed position of middle box

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <i class="fas fa-arrow-right"></i></a>
         </p>
       </div>
-      <div class="card card-5">
+      <div id= "rightcard"class="card card-5">
         <div class="card__icon">
           <img id= "weathericon"src="">
         </div>
