popup and text area added

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
   <!-- Ashé's Code -->
-  <section class="wrapper" onload="initClock()">
+  <section class="wrap" onload="initClock()">
     <div class="popup">
         <button data-form-target="#form">
             <div class="letter-image">
@@ -56,7 +56,7 @@
                 <div class="letter">
                   <div class="letter-border"></div>
                   <div class="letter-title"></div>
-                  <p>What are you feeling?</p>
+                  <h6><a class="buttonn" href="#popup1">How are you feeling?</a></h6>
                   <div class="letter-context"></div>
                   <div class="letter-stamp">
                     <div class="letter-stamp-inner"></div>
@@ -74,6 +74,15 @@
     <div id="overlay"></div>
     </section>
 
+    <div id="popup1" class="over">
+      <div class="pop">
+        <h4>Write your feelings and let them go</h4>
+        <a class="closed" href="#">Let it go</a>
+        <div class="content">
+          <textarea class="textarea" placeholder="e.g. Hello world"></textarea>
+        </div>
+      </div>
+    </div>
  
 <!-- digital clock start -->
 <div id="clock">
