style: changed color of pop up box

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h4>Write your feelings and let them go</h4>
         <a class="closed" href="#">Let it go</a>
         <div class="content">
-          <textarea class="textarea" placeholder="e.g. Hello world"></textarea>
+          <textarea class="textarea" placeholder="Don't worry I won't tell anyone"></textarea>
         </div>
       </div>
     </div>
