--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>Document</title>
   <link rel="stylesheet" href="calendar.css">
   <link rel="stylesheet" href="index.css">
-  <!-- <link rel="stylesheet" href="dolist.css"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
@@ -120,6 +119,7 @@ window.onload = function() { show("New_York") };
 <div class="zenMode">
   <p id="zen">Feeling Down?</p>
 </div>
+<!-- Things to do -->
   <div class="card card-3">
     <div class="card__icon"><i class="fas fa-bolt"></i></div>
     <p class="card__exit"><i class="fas fa-times"></i></p>
@@ -132,6 +132,7 @@ window.onload = function() { show("New_York") };
     </div>
     </p>
   </div>
+  <!-- end of to do list -->
   <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
   <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
   <script src="js/calendar.js"></script>
