--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
   <title>Document</title>
   <link rel="stylesheet" href="calendar.css">
   <link rel="stylesheet" href="index.css">
-  <!-- <link rel="stylesheet" href="dolist.css"> -->
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <img id="logo"src="images/logo.png">
+
 <body class="wrapper" >
-    <button id="signout_button" onclick="handleSignoutClick()">Sign Out</button>
+    <!-- <button id="signout_button" onclick="handleSignoutClick()">Sign Out</button> -->
     <pre id="content" style="white-space: pre-wrap;"></pre>
-      <div class="card card-4">
+      <!-- <div class="card card-4">
         <h1 class="date">
             <p id="intromessage">Connect via Gmail</p>
             <p class="date-num" id="date-num"></p>
@@ -30,16 +31,10 @@
           <a id="cardinnertext"class="card__link" href="#">
             <i class="fas fa-arrow-right"></i></a>
         </p>
-      </div>
-      <div id= "rightcard"class="card card-5">
-        <div class="card__icon">
-          <img id= "weathericon"src="">
-        </div>
-        <h2 id="temperature"></h2>
-        <h2 id="forecast"></h2>
-        <p class="card__apply">
-        </p>
-      </div>
+      </div> -->
+
+  
+      
   <!-- Ashé's Code -->
   <section class="wrap" onload="initClock()">
     <div class="popup">
@@ -50,7 +45,7 @@
                 <div class="letter">
                   <div class="letter-border"></div>
                   <div class="letter-title"></div>
-                  <h6><a class="buttonn" href="#popup1">How are you feeling?</a></h6>
+                  <h6><a class="buttonn" href="#dumpFeelings">How are you feeling?</a></h6>
                   <div class="letter-context"></div>
                   <div class="letter-stamp">
                     <div class="letter-stamp-inner"></div>
@@ -67,7 +62,7 @@
     </div>
     <div id="overlay"></div>
     </section>
-    <div id="popup1" class="over">
+    <div id="dumpFeelings" class="over">
       <div class="pop">
         <h4>Write your feelings and let them go</h4>
         <a class="closed" href="#">Let it go</a>
@@ -83,17 +78,13 @@
     var str = "";
     if (format === "New_York") {
         str += "New York " + time.toLocaleTimeString("en-US", { timeZone: "America/New_York", hour: "2-digit", minute: "2-digit" }) + "<br>";
-        // str += "Paris " + time.toLocaleTimeString("en-US", { timeZone: "Europe/Paris", hour: "2-digit", minute: "2-digit" }) + "<br>";
-        // str += "Tokyo " + time.toLocaleTimeString("en-US", { timeZone: "Asia/Tokyo", hour: "2-digit", minute: "2-digit" });
+
     }
     else if (format === "Paris") {
-        // str += "New York " + time.toLocaleTimeString("en-US", { timeZone: "America/New_York", hour: "2-digit", minute: "2-digit" }) + "<br>";
         str += "Paris " + time.toLocaleTimeString("en-US", { timeZone: "Europe/Paris", hour: "2-digit", minute: "2-digit" }) + "<br>";
-        // str += "Tokyo " + time.toLocaleTimeString("en-US", { timeZone: "Asia/Tokyo", hour: "2-digit", minute: "2-digit" });
+
     }
     else if (format === "Tokyo") {
-        // str += "New York " + time.toLocaleTimeString("en-US", { timeZone: "America/New_York", hour: "2-digit", minute: "2-digit" }) + "<br>";
-        // str += "Paris " + time.toLocaleTimeString("en-US", { timeZone: "Europe/Paris", hour: "2-digit", minute: "2-digit" }) + "<br>";
         str += "Tokyo " + time.toLocaleTimeString("en-US", { timeZone: "Asia/Tokyo", hour: "2-digit", minute: "2-digit" });
     }
     // else {
@@ -125,7 +116,7 @@ window.onload = function() { show("New_York") };
     <script src="js/calendar.js"></script>
     <script type = "module" src ="index.js"></script>
     <script type = "module" src="weather.js"></script>
-  <div class="card card-3">
+  <!-- <div class="card card-3">
     <div class="card__icon"><i class="fas fa-bolt"></i></div>
     <p class="card__exit"><i class="fas fa-times"></i></p>
     <h1>Things To-Do</h1>
@@ -136,7 +127,232 @@ window.onload = function() { show("New_York") };
       <ul id="list"></ul>
     </div>
     </p>
-  </div>
+  </div> -->
+
+  <style>
+    @import url(https://fonts.googleapis.com/css?family=Open+Sans:700,300);
+
+#todocontainer{
+  position: relative;
+  margin-top:-30px; 
+min-height:40px;
+}
+ .frame {
+  resize: both;
+  float:right;
+	 width: 275px;
+	 border-radius: 4px;
+	 box-shadow: 4px 8px 16px 0 rgba(0, 0, 0, 0.1);
+	 overflow: hidden;
+	 background: #fff;
+	 color: #333;
+	 font-family: 'Open Sans', Helvetica, sans-serif;
+	 -webkit-font-smoothing: antialiased;
+	 -moz-osx-font-smoothing: grayscale;
+	 padding: 20px 36px;
+}
+ header {
+	 text-align: center;
+	 padding-bottom: 20px;
+	 border-bottom: 1px solid #ccc;
+}
+ h1 {
+	 font-size: 1.2rem;
+	 margin-bottom: 4px;
+}
+ h2 {
+	 font-size: 1rem;
+	 font-weight: 400;
+}
+ .list {
+	 list-style: none;
+	 margin-top: 24px;
+}
+ .list li {
+	 padding-bottom: 20px;
+	 display: flex;
+	 flex-direction: row-reverse;
+	 justify-content: space-between;
+}
+ .list label {
+	 flex-grow: 1;
+	 transition: color 0.5s;
+}
+ .list input {
+	 position: relative;
+}
+ .list input::after {
+	 position: absolute;
+	 content: '';
+	 height: 20px;
+	 width: 20px;
+	 border: 1px solid rgba(136, 136, 136, 1);
+	 border-radius: 50%;
+	 transform: translate(-50%, -50%) scale(1);
+	 top: 50%;
+	 left: 50%;
+	 background-color: rgba(255, 255, 255, 1);
+	 transition: transform 0.6s, border 0.6s;
+}
+ .list input::before {
+	 position: absolute;
+	 content: '✔';
+	 height: 18px;
+	 width: 18px;
+	 transform: translate(-50%, -50%) scale(0.8);
+	 top: 60%;
+	 left: 80%;
+	 color: #888;
+	 z-index: 1;
+	 opacity: 0;
+	 transition: transform 0.6s, opacity 0.6s;
+}
+ .list input:checked + label {
+	 color: rgba(51, 51, 51, .4);
+}
+ .list input:checked::after {
+	 transform: translate(-50%, -50%) scale(1.2);
+	 border: 1px solid rgba(136, 136, 136, 0);
+}
+ .list input:checked::before {
+	 opacity: 0.4;
+	 transform: translate(-50%, -50%) scale(1);
+}
+ 
+  </style>
+  <script>
+    const today = new Date()
+
+const weekday = new Intl.DateTimeFormat('en-US', {weekday: 'long'}).format(today)
+const month = new Intl.DateTimeFormat('en-US', {month: 'long'}).format(today)
+const date = today.getDate()
+const year = today.getFullYear()
+
+const dayLabel = document.getElementById('day')
+dayLabel.textContent = weekday
+
+const dateLabel = document.getElementById('date')
+dateLabel.textContent = `${month} ${date}, ${year}`
+  </script>
+  
+
+  <script>
+        function drag_start(event) {
+            var style = window.getComputedStyle(event.target, null);
+            var str = (parseInt(style.getPropertyValue("left")) - event.clientX) + ',' + (parseInt(style.getPropertyValue("top")) - event.clientY) + ',' + event.target.id;
+            event.dataTransfer.setData("Text", str);
+        }
+
+        function drop(event) {
+            var offset = event.dataTransfer.getData("Text").split(',');
+            var dm = document.getElementById(offset[2]);
+            dm.style.left = (event.clientX + parseInt(offset[0], 10)) + 'px';
+            dm.style.top = (event.clientY + parseInt(offset[1], 10)) + 'px';
+            event.preventDefault();
+            return false;
+        }
+
+        function drag_over(event) {
+            event.preventDefault();
+            return false;
+        }
+  </script>
+ 
+  <style>
+    /* calendar */
+    #txt1
+    { 
+      list-style: none;
+      resize: both;
+        position:  absolute;
+        left: 0px;
+        bottom: 200px;/* set these so Chrome doesn't return 'auto' from getComputedStyle */
+        width: 200px; 
+        /* height: auto; */
+        /* background: rgba(255,255,255,0.66);  */
+        /* border: 2px  solid rgba(0,0,0,0.5);  */
+        border-radius: 4px; padding: 8px;
+    }
+    /* todolist */
+    #txt2
+    { 
+      list-style: none;
+      resize: both;
+        position:  absolute;
+        right: 400px;
+        bottom: 200px; /* set these so Chrome doesn't return 'auto' from getComputedStyle */
+        width: 200px; 
+        /* height: auto; */
+        /* background: rgba(255,255,255,0.66);  */
+        /* border: 2px  solid rgba(0,0,0,0.5);  */
+        border-radius: 4px; padding: 8px;
+    }
+    /* time */
+    #txt3
+    { 
+      list-style: none;
+      resize: both;
+        position:  absolute;
+        left: 200px;
+        top: 0;
+         /* set these so Chrome doesn't return 'auto' from getComputedStyle */
+        width: 200px; 
+        /* height: auto; */
+        /* background: rgba(255,255,255,0.66);  */
+        /* border: 2px  solid rgba(0,0,0,0.5);  */
+        border-radius: 4px; padding: 8px;
+    }
+    </style>
+  <body ondragover="drag_over(event)" ondrop="drop(event)">
+   <ul>
+          <li id="txt1" draggable="true" ondragstart="drag_start(event)">     <div class="card card-4">
+            <h1 class="date">
+                <p id="intromessage">Connect via Gmail</p>
+                <p class="date-num" id="date-num"></p>
+                <p class="date-day" id="date-day"></p>
+            </h1>
+            <div class="card__icon"><i class="fas fa-bolt"></i></div>
+            <p class="card__exit"><i class="fas fa-times"></i></p>
+            <h2 class="title" id="eventsummary"></h2>
+              <p class="time" id="time"></p>
+              <p class="card__apply">
+              <button id="authorize_button" onclick="handleAuthClick()">Authorize your account</button>
+              <a id="cardinnertext"class="card__link" href="#">
+                <i class="fas fa-arrow-right"></i></a>
+            </p>
+          </div> </li><br>
+     </ul>
+     <ul>
+          <li id="txt2" draggable="true" ondragstart="drag_start(event)">  <div class="card card-3">
+            <div class="card__icon"><i class="fas fa-bolt"></i></div>
+            <p class="card__exit"><i class="fas fa-times"></i></p>
+            <h1>Things To-Do</h1>
+            <div class="container">
+              <form action="#">
+                <input type="text" name="item" id="item" placeholder="" />
+              </form>
+              <ul id="list"></ul>
+            </div>
+            </p>
+          </div></li>
+        </ul>
+    <ul>
+          <li id="txt3" draggable="true" ondragstart="drag_start(event)"> <div id="thisTime">
+            <p>Time :
+                <select name="select" id="select" onchange="show(this.value)">
+                    <option value="New_York">New York</option>
+                    <option value="Paris">Paris</option>
+                    <option value="Tokyo">Tokyo</option>
+                </select>
+            </p>
+            <div id="displayTime"></div>
+            </div></li>
+  </ul>
+      
+
+
+
+
   <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
   <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
   <script src="js/calendar.js"></script>
