--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
             <i class="fas fa-arrow-right"></i></a>
         </p>
       </div> -->
+      <div id= "rightcard"class="card card-5">
+        <div class="card__icon">
+          <img id= "weathericon"src="">
+        </div>
+        <h2 id="temperature"></h2>
+        <h2 id="forecast"></h2>
+        <p class="card__apply">
+        </p>
+      </div>
   <!-- Ashé's Code -->
   <section class="wrap" onload="initClock()">
     <div class="popup">
