style: reworked connect button

--- a/index.html
+++ b/index.html
@@ -130,12 +130,10 @@ dateLabel.textContent = `${month} ${date}, ${year}`
                     <p class="date-num" id="date-num"></p>
                     <p class="date-day" id="date-day"></p>
                 </h1>
-                <div class="card__icon"><i class="fas fa-bolt"></i></div>
-                <p class="card__exit"><i class="fas fa-times"></i></p>
-                <h2 class="title" id="eventsummary"></h2>
+                <h2 class="title" id="eventsummary">Connect via Gmail</h2>
                 <p class="time" id="time"></p>
                 <p class="card__apply">
-                  <a id="cardinnertext"class="card__link" href="#">Hey you <i class="fas fa-arrow-right"></i></a>
+                  <a id="cardinnertext"class="card__link" href="#"><i></i></a>
                   <button id="authorize_button" onclick="handleAuthClick()">Authorize Your Account</button>
                 </p>
               </div>
