bug: fixed wording of the return val of the weather object, increases coherency

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ dateLabel.textContent = `${month} ${date}, ${year}`
                 <h2 class="title" id="eventsummary">Connect via Gmail</h2>
                 <p class="time" id="time"></p>
                 <p class="card__apply">
-                  <a id="cardinnertext"class="card__link" href="#"><i></i></a>
+                  <a id="cardinnertext" href="#"class="card__link"><i></i></a>
                   <button id="authorize_button" onclick="handleAuthClick()">Authorize Your Account</button>
                 </p>
               </div>
