style:changed home logo to white

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
-<img id="logo"src="images/logo.png">
+<img id="logo"src="images/whitelogo.png">
 
 <body class="wrapper" >
     <pre id="content" style="white-space: pre-wrap;"></pre>
