bug: fixed error in which different events return different objects

--- a/LandingPage/LandingPage.html
+++ b/LandingPage/LandingPage.html
@@ -29,7 +29,7 @@
   </div>
   <div class="text">
     <img id="landinglogo" src="../images/logo.png">
-    <p>Stress Less</p>
+    <p>stress less</p>
     <div class="buttonOptions">
       <button id="more" onclick="pageRedirect()">DoMore</button>
     </div>
