--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ dateLabel.textContent = `${month} ${date}, ${year}`
                     <p class="date-day" id="date-day"></p>
                 </h1>
                 <h2 class="title" id="eventsummary">Connect via Gmail</h2>
+                <p id="eventdescrip"></p>
                 <p class="time" id="time"></p>
                 <p class="card__apply">
                   <a id="cardinnertext" href="#"class="card__link"><i></i></a>
