--- a/test.html
+++ b/test.html
@@ -1,140 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<div class="container">
-
-	<ul class="list-group todos mx-auto text-light">
-		<li class="list-group-item d-flex justify-content-between align-items-center">
-			<span>Do yoya</span>
-			<i class="fa fa-trash-o delete"></i>
-		</li>
-		<li class="list-group-item d-flex justify-content-between align-items-center">
-			<span>50 pushups</span>
-			<i class="fa fa-trash-o delete"></i>
-
-		</li>
-		<li class="list-group-item d-flex justify-content-between align-items-center">
-			<span>Read Book Novel</span>
-			<i class="fa fa-trash-o delete"></i>
-
-		</li>
-	</ul>
-
-	<form class="add text-center my-4" autocomplete="off">
-		<label class="text-light">
-			Add New Todo...
-		</label>
-		<input type="text" class="form-control m-auto" name="add"/>
-	</form>
-</div>
-
-<style>
-    /* :root {
-  --color: rgb(43, 68, 180);
-  --color2: rgb(157, 239, 241);
-} */
-
-/* body {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  height: 100vh;
-  background-image: linear-gradient(
-    330deg,
-    var(--color) 10%,
-    var(--color2) 80%
-  );
-  font-size: 20px;
-} */
-
-.container {
-  max-width: 400px;
-  margin-top: 90px;
-}
-.search i {
-  position: absolute;
-}
-.search {
-  position: relative;
-}
-.icon {
-  padding: 10px;
-  left: 0;
-}
-.input-field {
-  text-align: center;
-}
-
-input[type="text"],
-input[type="text"]:focus {
-  color: #fff;
-  border: none;
-  background: rgba(0, 0, 0, 0.3);
-  max-width: 400px;
-}
-.todos li {
-  background: #423a6f;
-}
-.delete {
-  cursor: pointer;
-}
-
-
-.filtered{
-  display: none !important;
-}
-</style>
-
-<script>
-    let $ = document
-let ulElem = $.querySelector("ul")
-let input = $.querySelector("input")
-let form = $.querySelector(".add")
-
-form.addEventListener("submit",submitForm)
-function submitForm(e){
-	e.preventDefault()
-}
-
-input.addEventListener("keydown",addTodoHandler)
-function addTodoHandler (e){
-	if(e.keyCode === 13){
-		if(input.value){
-			let newLiElem = $.createElement("li")
-			newLiElem.className = "list-group-item d-flex justify-content-between align-items-center"
-			let newSpanElem = $.createElement("span")
-			newSpanElem.innerHTML = input.value.trim()
-			let newIElem = $.createElement("i")
-			newIElem.className = "fa fa-trash-o delete"
-			newLiElem.append(newSpanElem,newIElem)
-			ulElem.append(newLiElem)
-			input.value = ""
-			
-			// delete todo
-			newIElem.addEventListener("click",removetodo)
-			function removetodo(e){
-				e.target.parentElement.remove()
-			}
-		}
-	}
-}
-
-// for delete default todo
-let removeBtn = $.querySelectorAll(".delete")
-removeBtn.forEach(function(li){
-  li.addEventListener("click",trash)
-	function trash (event) {
-		event.target.parentElement.remove()
-	}
-})
-</script>
-</body>
-</html>
+<script>let draggableElem1 = document.getElementById("draggable-elem");
+    let initialX1 = 0,
+      initialY1 = 0;
+    let moveElement = false;
+    //events object
+    let events = {
+      mouse: {
+        down: "mousedown",
+        move: "mousemove",
+        up: "mouseup"
+      },
+      touch: {
+        down: "touchstart",
+        move: "touchmove",
+        up: "touchend"
+      }
+    };
+    let deviceType = "";
+    //Detect touch device
+    const isTouchDevice = () => {
+      try {
+        //We try to create TouchEvent (it would fail for desktops and throw error)
+        document.createEvent("TouchEvent");
+        deviceType = "touch";
+        return true;
+      } catch (e) {
+        deviceType = "mouse";
+        return false;
+      }
+    };
+    isTouchDevice();
+    // start(mouse down/touch start)
+    draggableElem1.addEventListener(events[deviceType].down, (e) => {
+      e.preventDefault();
+      //initial x and y points
+      initialX1 = !isTouchDevice() ? e.clientX : e.touches[0].clientX;
+      initialY1 = !isTouchDevice() ? e.clientY : e.touches[0].clientY;
+      // start movement
+      moveElement = true;
+    });
+    // Move
+    draggableElem1.addEventListener(events[deviceType].move, (e) => {
+      //if movement==true then set top and left to new X and y while removing any offset
+      if (moveElement) {
+        e.preventDefault();
+        let newX = !isTouchDevice() ? e.clientX : e.touches[0].clientX;
+        let newY = !isTouchDevice() ? e.clientY : e.touches[0].clientY;
+        draggableElem1.style.top = draggableElem1.offsetTop - (initialY1 - newY) + "px";
+        draggableElem1.style.left =
+          draggableElem1.offsetLeft - (initialX1 - newX) + "px";
+        initialX1 = newX;
+        initialY1 = newY;
+      }
+    });
+    //mouse up/touch end
+    draggableElem1.addEventListener(
+      events[deviceType].up,
+      (stopMovement = (e) => {
+        //stop movement
+        moveElement = false;
+      })
+    );
+    draggableElem1.addEventListener("mouseleave", stopMovement);
+    document.addEventListener(events[deviceType].up, (e) => {
+      moveElement = false;
+    });</script>
